--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>
+  Hey there, I am Ajay Kumar Mandal. 
+  This site is under construction
+  Soon I will update it to my portfolio website
+  
+  Stay tune
+  
+  Check my Youtube now !!
+  https://www.youtube.com/c/Zexa_YT
+  </p>
 </body>
 </html>
