--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   Stay tune
   
   Check my Youtube now !!
-  https://www.youtube.com/c/Zexa_YT
+  <a href="https://www.youtube.com/c/Zexa_YT">Zexa_YT</a>
   </p>
 </body>
 </html>
