--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>
+<pre>
   Hey there, I am Ajay Kumar Mandal. 
   This site is under construction
   Soon I will update it to my portfolio website
@@ -11,6 +11,6 @@
   
   Check my Youtube now !!
   <a href="https://www.youtube.com/c/Zexa_YT">Zexa_YT</a>
-  </p>
+  </pre>
 </body>
 </html>
