--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   This site is under construction
   Soon I will update it to my portfolio website
   
-  Stay tune
+  Stay tune !!
   
-  Check my Youtube now !!
-  <a href="https://www.youtube.com/c/Zexa_YT">Zexa_YT</a>
+  Check my Youtube now <a href="https://www.youtube.com/c/Zexa_YT">Zexa_YT</a>
   </pre>
 </body>
 </html>
